# powerlifter

./: CMakeLists.txt  Kconfig  prj.conf  west.yml
boards/arm/zgm_002/: board.cmake  zgm_002.dts
drivers/can/canard/: canard_if.c
drivers/gpio/: CMakeLists.txt  Kconfig.tca9539  gpio_tca9539.c
dts/bindings/zgm_002/drivers/feedback/: ams,as5047.yaml  infineon,tle5012b.yaml  st,feedback.yaml  st,stm32-abz-hall.yaml
dts/bindings/zgm_002/foc/: foc.yaml
dts/bindings/zgm_002/motor/: motor_bldc.yaml
src/: main.c  mc_thread.c  super_thread.c
